@@ -25,13 +25,24 @@
 package tests;
 
 import org.junit.jupiter.api.Assertions;
+import org.openjdk.btrace.client.Client;
+import org.openjdk.btrace.core.comm.BinaryWireProtocol;
+import org.openjdk.btrace.core.comm.Command;
+import org.openjdk.btrace.core.comm.JavaSerializationProtocol;
+import org.openjdk.btrace.core.comm.ListProbesCommand;
+import org.openjdk.btrace.core.comm.ProtocolConfig;
+import org.openjdk.btrace.core.comm.ProtocolNegotiator;
+import org.openjdk.btrace.core.comm.ProtocolVersion;
+import org.openjdk.btrace.core.comm.WireProtocol;
 
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.OutputStream;
 import java.io.PrintWriter;
-import java.util.Properties;
+import java.net.Socket;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.FileVisitResult;
 import java.nio.file.FileVisitor;
@@ -41,7 +52,9 @@ import java.nio.file.Paths;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.Properties;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -54,6 +67,7 @@ import java.util.concurrent.atomic.AtomicReference;
 @SuppressWarnings("ConstantConditions")
 public abstract class RuntimeTest {
   private static String cp = null;
+  private static String targetAppCp = null;
   protected static String javaHome = null;
   private static String clientClassPath = null;
   private static String eventsClassPath = null;
@@ -73,12 +87,31 @@ public abstract class RuntimeTest {
   protected long timeout = 10000L;
   /** Track retransforming progress */
   protected boolean trackRetransforms = false;
+  /** Disconnect after status OK (client -x) */
+  protected boolean unattended = false;
+  /** Delay before client attach (ms) */
+  protected long attachDelayMs = 0;
+  /** Dump generated oneliner source */
+  protected boolean dumpOneliner = false;
+  /** Dump verifier errors in target JVM */
+  protected boolean dumpVerifierErrors = false;
+  /** Override the BTrace agent/client port (0 = use default 2020) */
+  protected int btracePort = 0;
   /** Provide extra JVM args */
   private static final List<String> extraJvmArgs = new ArrayList<>();
 
   protected boolean attachDebugger = false;
 
   public static void classSetup() {
+    if (System.getProperty("btrace.comm.protocol") == null) {
+      System.setProperty("btrace.comm.protocol", "2");
+    }
+    if (System.getProperty("btrace.comm.autoNegotiate") == null) {
+      System.setProperty("btrace.comm.autoNegotiate", "false");
+    }
+    if (System.getProperty("btrace.comm.forceVersion") == null) {
+      System.setProperty("btrace.comm.forceVersion", "true");
+    }
     String forceDebugVal = System.getProperty("btrace.test.debug");
     if (forceDebugVal == null) {
       forceDebugVal = System.getenv("BTRACE_TEST_DEBUG");
@@ -86,15 +119,27 @@ public abstract class RuntimeTest {
     forceDebug = Boolean.parseBoolean(forceDebugVal);
     Path libsPath = Paths.get(System.getProperty("btrace.libs"));
     projectRoot = Paths.get(System.getProperty("project.dir"));
-    Path clientJarPath = libsPath.resolve("btrace-client.jar");
+    Path btraceJarPath = libsPath.resolve("btrace.jar");
+
+    Assertions.assertTrue(
+        Files.isRegularFile(btraceJarPath),
+        "btrace.jar missing in libs directory");
     Path eventsJarPath = projectRoot.resolve("build/libs/events.jar");
-    clientClassPath = clientJarPath.toString();
+    clientClassPath = btraceJarPath.toString();
     eventsClassPath = eventsJarPath.toString();
-    // client jar needs to take precedence in order for the agent.jar inferring code to work
+
     cp =
-        clientJarPath
+        btraceJarPath
             + File.pathSeparator
             + projectRoot.resolve("build/classes/java/test")
+            + File.pathSeparator
+            + projectRoot.resolve("build/resources/test")
+            + File.pathSeparator
+            + eventsClassPath;
+
+    // Target app classpath without btrace.jar - btrace is attached as agent
+    targetAppCp =
+        projectRoot.resolve("build/classes/java/test")
             + File.pathSeparator
             + projectRoot.resolve("build/resources/test")
             + File.pathSeparator
@@ -158,7 +203,7 @@ public abstract class RuntimeTest {
       Files.createDirectories(permsDir);
       Path perms = permsDir.resolve("permissions.properties");
       String content = "allowPrivileged=true\n" +
-                       "allowExtensions=btrace-metrics,btrace-utils,btrace-statsd\n";
+                       "allowExtensions=btrace-metrics,btrace-utils,btrace-statsd,btrace-ext-test\n";
       Files.write(perms, content.getBytes(StandardCharsets.UTF_8));
       permissionsFile = perms.toAbsolutePath().toString();
     } catch (IOException ioe) {
@@ -171,6 +216,11 @@ public abstract class RuntimeTest {
     debugTestApp = false;
     debugBTrace = false;
     isUnsafe = false;
+    unattended = false;
+    attachDelayMs = 0;
+    dumpOneliner = false;
+    dumpVerifierErrors = false;
+    btracePort = 0;
     timeout = defaultTimeoutMs;
   }
 
@@ -225,6 +275,195 @@ public abstract class RuntimeTest {
   }
 
   @SuppressWarnings("DefaultCharset")
+  public void testDynamicOneliner(
+      String testApp, String oneliner, int checkLines, ResultValidator v) throws Exception {
+    testDynamicOneliner(testApp, oneliner, null, checkLines, v);
+  }
+
+  @SuppressWarnings("DefaultCharset")
+  public void testDynamicOneliner(
+      String testApp, String oneliner, String[] cmdArgs, int checkLines, ResultValidator v)
+      throws Exception {
+    System.out.println("=== Dynamic attach (oneliner)");
+    if (forceDebug) {
+      // force debug flags
+      debugBTrace = true;
+      debugTestApp = true;
+    }
+    String testJavaHome = System.getenv("TEST_JAVA_HOME");
+    if (testJavaHome == null) {
+      testJavaHome = System.getenv("JAVA_TEST_HOME");
+    }
+    testJavaHome = testJavaHome != null ? testJavaHome : System.getenv("JAVA_HOME");
+    if (testJavaHome == null) {
+      throw new IllegalStateException("Missing TEST_JAVA_HOME or JAVA_HOME env variables");
+    }
+    System.out.println("===> test java: " + testJavaHome);
+    String jfrFile = null;
+    List<String> args = new ArrayList<>(Arrays.asList(testJavaHome + "/bin/java", "-cp", cp));
+    if (permissionsFile != null) {
+      args.add("-Dbtrace.permissions=" + permissionsFile);
+    }
+    if (attachDebugger) {
+      args.add("-agentlib:jdwp=transport=dt_socket,server=y,address=8000");
+    }
+    args.add("-XX:+AllowRedefinitionToAddDeleteMethods");
+    args.add("-XX:+IgnoreUnrecognizedVMOptions");
+    args.add("-XX:+EnableDynamicAgentLoading");
+    args.add("-XX:+UnlockDiagnosticVMOptions");
+    args.add("-XX:-OmitStackTraceInFastThrow");
+    if (dumpVerifierErrors) {
+      args.add("-Dbtrace.verifier.dump=true");
+    }
+    args.addAll(extraJvmArgs);
+    if (startJfr) {
+      jfrFile = Files.createTempFile("btrace-", ".jfr").toString();
+      args.add("-XX:StartFlightRecording=settings=default,dumponexit=true,filename=" + jfrFile);
+    }
+    args.add("-Dbtrace.test=test");
+    args.add(testApp);
+
+    ProcessBuilder pb = new ProcessBuilder(args);
+    pb.environment().remove("JAVA_TOOL_OPTIONS");
+
+    Process p = pb.start();
+    PrintWriter pw = new PrintWriter(p.getOutputStream());
+
+    StringBuilder stdout = new StringBuilder();
+    StringBuilder stderr = new StringBuilder();
+    AtomicInteger ret = new AtomicInteger(-1);
+
+    BufferedReader stdoutReader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+
+    CountDownLatch testAppLatch = new CountDownLatch(1);
+    AtomicReference<String> pidStringRef = new AtomicReference<>();
+
+    Thread outT =
+        new Thread(
+            () -> {
+              try {
+                String l;
+                while ((l = stdoutReader.readLine()) != null) {
+                  if (l.startsWith("ready:")) {
+                    pidStringRef.set(l.split(":")[1]);
+                    testAppLatch.countDown();
+                  }
+                  if (debugTestApp) {
+                    System.out.println("[traced app] " + l);
+                  }
+                }
+
+              } catch (Exception e) {
+                e.printStackTrace(System.err);
+              }
+            },
+            "STDOUT Reader");
+    outT.setDaemon(true);
+
+    BufferedReader stderrReader = new BufferedReader(new InputStreamReader(p.getErrorStream()));
+
+    Thread errT =
+        new Thread(
+            () -> {
+              try {
+                String l = null;
+                while ((l = stderrReader.readLine()) != null) {
+                  if (l.contains("Server VM warning")
+                      || l.contains("XML libraries not available")
+                      || l.contains("terminally deprecated method in sun.misc.Unsafe")
+                      || l.contains("sun.misc.Unsafe::objectFieldOffset")
+                      || l.contains("org.jctools.util.UnsafeAccess")
+                      || l.contains("ASM verification requested for ")
+                      || l.contains("ASM verification OK for ")) {
+                    continue;
+                  }
+                  testAppLatch.countDown();
+                  if (debugTestApp) {
+                    System.err.println("[traced app] " + l);
+                  }
+                }
+              } catch (Exception e) {
+                e.printStackTrace(System.err);
+              }
+            },
+            "STDERR Reader");
+    errT.setDaemon(true);
+
+    outT.start();
+    errT.start();
+
+    testAppLatch.await();
+    String pid = pidStringRef.get();
+    if (pid != null) {
+      System.out.println("Target process ready: " + pid);
+      if (attachDelayMs > 0) {
+        try {
+          Thread.sleep(attachDelayMs);
+        } catch (InterruptedException ie) {
+          Thread.currentThread().interrupt();
+        }
+      }
+
+      Process client = attachOneliner(pid, oneliner, cmdArgs, checkLines, stdout, stderr);
+
+      System.out.println("Detached.");
+
+      // Signal the target app to shut down
+      pw.println("done");
+      pw.flush();
+
+      // Wait for the target process to exit gracefully
+      if (!p.waitFor(10, TimeUnit.SECONDS)) {
+        System.out.println("Target process did not exit in time, destroying.");
+        p.destroyForcibly();
+      }
+
+      // Now wait for the client process (should exit quickly once target is gone)
+      if (!client.waitFor(10, TimeUnit.SECONDS)) {
+        System.out.println("Client process did not exit in time, destroying.");
+        client.destroyForcibly();
+      }
+
+      ret.set(client.isAlive() ? -1 : client.exitValue());
+
+      outT.join(5000);
+      errT.join(5000);
+    }
+
+    // Allow a brief grace period for any final output to flush before validation
+    try {
+      Thread.sleep(500L);
+    } catch (InterruptedException ie) {
+      Thread.currentThread().interrupt();
+    }
+    // If JFR was enabled for dynamic attach, give it a moment and dump the recording
+    if (startJfr && pidStringRef.get() != null) {
+      try {
+        Thread.sleep(1500L);
+      } catch (InterruptedException ie) {
+        Thread.currentThread().interrupt();
+      }
+      try {
+        ProcessBuilder jcmdPb;
+        String jcmdExe =
+            testJavaHome != null ? Paths.get(testJavaHome, "bin", "jcmd").toString() : "jcmd";
+        if (jfrFile != null) {
+          jcmdPb =
+              new ProcessBuilder(
+                  jcmdExe, pidStringRef.get(), "JFR.dump", "name=1", "filename=" + jfrFile);
+        } else {
+          jcmdPb = new ProcessBuilder(jcmdExe, pidStringRef.get(), "JFR.dump", "name=1");
+        }
+        jcmdPb.start().waitFor();
+      } catch (Exception e) {
+        e.printStackTrace(System.err);
+      }
+    }
+
+    v.validate(stdout.toString(), stderr.toString(), ret.get(), jfrFile);
+  }
+
+  @SuppressWarnings("DefaultCharset")
   public void testDynamic(
       String testApp, String testScript, String[] cmdArgs, int checkLines, ResultValidator v)
       throws Exception {
@@ -244,7 +483,7 @@ public abstract class RuntimeTest {
     }
     System.out.println("===> test java: " + testJavaHome);
     String jfrFile = null;
-    List<String> args = new ArrayList<>(Arrays.asList(testJavaHome + "/bin/java", "-cp", cp));
+    List<String> args = new ArrayList<>(Arrays.asList(testJavaHome + "/bin/java", "-cp", targetAppCp));
     if (permissionsFile != null) {
       args.add("-Dbtrace.permissions=" + permissionsFile);
     }
@@ -341,30 +580,38 @@ public abstract class RuntimeTest {
     String pid = pidStringRef.get();
     if (pid != null) {
       System.out.println("Target process ready: " + pid);
+      if (attachDelayMs > 0) {
+        try {
+          Thread.sleep(attachDelayMs);
+        } catch (InterruptedException ie) {
+          Thread.currentThread().interrupt();
+        }
+      }
 
       Process client = attach(pid, testScript, cmdArgs, checkLines, stdout, stderr);
 
       System.out.println("Detached.");
 
-      int retries = 1000;
-      boolean exitted = false;
-      while (!exitted && retries-- > 0) {
-        pw.println("done");
-        pw.flush();
-        exitted = client.waitFor(1, TimeUnit.SECONDS);
-        if (!exitted) {
-          System.out.println("... retrying ...");
-        }
+      // Signal the target app to shut down
+      pw.println("done");
+      pw.flush();
+
+      // Wait for the target process to exit gracefully
+      if (!p.waitFor(10, TimeUnit.SECONDS)) {
+        System.out.println("Target process did not exit in time, destroying.");
+        p.destroyForcibly();
       }
 
-      if (!exitted) {
+      // Now wait for the client process (should exit quickly once target is gone)
+      if (!client.waitFor(10, TimeUnit.SECONDS)) {
+        System.out.println("Client process did not exit in time, destroying.");
         client.destroyForcibly();
       }
 
-      ret.set(exitted ? client.exitValue() : -1);
+      ret.set(client.isAlive() ? -1 : client.exitValue());
 
-      outT.join();
-      errT.join();
+      outT.join(5000);
+      errT.join(5000);
     }
 
     // Allow a brief grace period for any final output to flush before validation
@@ -405,7 +652,7 @@ public abstract class RuntimeTest {
     System.out.println("=== On-Startup");
     Path agentPath = locateAgent();
     if (agentPath == null) {
-      throw new RuntimeException("Missing btrace-agent.jar");
+      throw new RuntimeException("Missing btrace.jar or btrace-agent.jar");
     }
     if (forceDebug) {
       // force debug flags
@@ -421,7 +668,7 @@ public abstract class RuntimeTest {
       throw new IllegalStateException("Missing TEST_JAVA_HOME or JAVA_HOME env variables");
     }
     String jfrFile = null;
-    List<String> args = new ArrayList<>(Arrays.asList(testJavaHome + "/bin/java", "-cp", cp));
+    List<String> args = new ArrayList<>(Arrays.asList(testJavaHome + "/bin/java", "-cp", targetAppCp));
     if (permissionsFile != null) {
       args.add("-Dbtrace.permissions=" + permissionsFile);
     }
@@ -504,11 +751,16 @@ public abstract class RuntimeTest {
                   if (l.contains("SLF4J")
                       || l.contains("Server VM warning")
                       || l.contains("XML")
+                      || l.contains("Successfully started BTrace probe")
                       || l.contains("terminally deprecated method in sun.misc.Unsafe")
                       || l.contains("sun.misc.Unsafe::objectFieldOffset")
                       || l.contains("org.jctools.util.UnsafeAccess")
                       || l.contains("ASM verification requested for ")
-                      || l.contains("ASM verification OK for ")) {
+                      || l.contains("ASM verification OK for ")
+                      || l.contains("A restricted method")
+                      || l.contains("has been called by")
+                      || l.contains("enable-native-access")
+                      || l.contains("Restricted methods will be blocked")) {
                     continue;
                   }
                   stderr.append(l).append(System.lineSeparator());
@@ -536,9 +788,7 @@ public abstract class RuntimeTest {
 
     testAppLatch.await();
     stdoutLatch.await();
-
-    // Allow time for traced app to produce additional output after "ready:"
-    // BTrace INFO logs during agent init can exhaust stdoutLatch before app work begins
+    // Allow some time for late BTrace output to flush in on-startup mode.
     try {
       Thread.sleep(1000L);
     } catch (InterruptedException ie) {
@@ -564,11 +814,19 @@ public abstract class RuntimeTest {
     }
 
     v.validate(stdout.toString(), stderr.toString(), ret.get(), jfrFile);
+
+    // Clean up the target process
+    pw.println("done");
+    pw.flush();
+    if (!p.waitFor(10, TimeUnit.SECONDS)) {
+      p.destroyForcibly();
+    }
   }
 
   protected Path locateAgent() {
     Path start = projectRoot.resolve("../btrace-dist/build/resources/main");
-    Path[] tracePath = new Path[1];
+    // [0] = masked btrace.jar, [1] = old btrace-agent.jar
+    Path[] tracePath = new Path[2];
     try {
       Files.walkFileTree(
           start,
@@ -582,9 +840,15 @@ public abstract class RuntimeTest {
             @Override
             public FileVisitResult visitFile(Path file, BasicFileAttributes attrs)
                 throws IOException {
-              if (file.toString().endsWith("btrace-agent.jar")) {
+              String fileName = file.getFileName().toString();
+              if (fileName.equals("btrace.jar")) {
+                // Prefer the new masked btrace.jar
                 tracePath[0] = file;
                 return FileVisitResult.TERMINATE;
+              }
+              if (fileName.equals("btrace-agent.jar") && tracePath[1] == null) {
+                // Fall back to old btrace-agent.jar
+                tracePath[1] = file;
               }
               return FileVisitResult.CONTINUE;
             }
@@ -603,7 +867,8 @@ public abstract class RuntimeTest {
     } catch (IOException e) {
       e.printStackTrace();
     }
-    return tracePath[0];
+    // Prefer masked btrace.jar, fall back to btrace-agent.jar
+    return tracePath[0] != null ? tracePath[0] : tracePath[1];
   }
 
   public static final class TestApp {
@@ -729,19 +994,26 @@ public abstract class RuntimeTest {
                 javaHome + "/bin/java",
                 "-cp",
                 cp,
-                "org.openjdk.btrace.client.Main",
+                "org.openjdk.btrace.boot.Loader",
                 "-cp",
                 eventsClassPath,
                 "-d",
                 Paths.get(System.getProperty("java.io.tmpdir"), "btrace-test").toString()));
     if (debugBTrace) {
-      argVals.add(4, "-v"); // insert after Main class name
+      int mainClassIdx = argVals.indexOf("org.openjdk.btrace.boot.Loader");
+      argVals.add(mainClassIdx + 1, "-v");
     }
     argVals.addAll(Arrays.asList(args));
     if (Files.exists(Paths.get(javaHome, "jmods"))) {
       argVals.addAll(
           1,
-          Arrays.asList("--add-exports", "jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED"));
+          Arrays.asList(
+              "--add-exports",
+              "jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
+              "--add-modules",
+              "jdk.attach",
+              "--add-exports",
+              "jdk.attach/sun.tools.attach=ALL-UNNAMED"));
     }
 
     ProcessBuilder pb = new ProcessBuilder(argVals);
@@ -766,6 +1038,7 @@ public abstract class RuntimeTest {
                   System.out.println("[btrace err] " + line);
                   if (line.contains("Server VM warning")
                       || line.contains("XML libraries not available")
+                      || line.contains("Successfully started BTrace probe")
                       || line.contains("Connection reset")) {
                     // skip JVM generated warnings
                     continue;
@@ -858,13 +1131,14 @@ public abstract class RuntimeTest {
                 javaHome + "/bin/java",
                 "-cp",
                 cp,
-                "org.openjdk.btrace.client.Main",
+                "org.openjdk.btrace.boot.Loader",
                 "-cp",
                 eventsClassPath,
                 "-d",
                 Paths.get(System.getProperty("java.io.tmpdir"), "btrace-test").toString()));
     if (debugBTrace) {
-      argVals.add(4, "-v"); // insert after Main class name
+      int mainClassIdx = argVals.indexOf("org.openjdk.btrace.boot.Loader");
+      argVals.add(mainClassIdx + 1, "-v");
     }
     argVals.addAll(Arrays.asList(args));
     if (Files.exists(Paths.get(javaHome, "jmods"))) {
@@ -1015,9 +1289,16 @@ public abstract class RuntimeTest {
                 "-Dcom.sun.btrace.unsafe=" + isUnsafe,
                 "-Dcom.sun.btrace.debug=" + debugBTrace,
                 "-Dcom.sun.btrace.trackRetransforms=" + trackRetransforms,
+                "-Dbtrace.comm.protocol=2",
+                "-Dbtrace.comm.autoNegotiate=false",
+                "-Dbtrace.comm.forceVersion=true",
+                "-Dbtrace.port=" + getBTracePort(),
+                "-Dbtrace.libs=" + System.getProperty("btrace.libs"),
                 "-cp",
                 cp,
-                "org.openjdk.btrace.client.Main",
+                "org.openjdk.btrace.boot.Loader",
+                "-p",
+                String.valueOf(getBTracePort()),
                 "-cp",
                 eventsClassPath,
                 "-d",
@@ -1026,6 +1307,15 @@ public abstract class RuntimeTest {
                 traceFile.getParentFile().getAbsolutePath()));
     if (debugBTrace) {
       argVals.add("-v");
+    }
+    if (dumpOneliner) {
+      int cpIdx = argVals.indexOf("-cp");
+      if (cpIdx > -1) {
+        argVals.add(cpIdx, "-Dbtrace.oneliner.dump=true");
+      }
+    }
+    if (unattended) {
+      argVals.add("-x");
     }
     argVals.addAll(Arrays.asList(pid, traceFile.getAbsolutePath()));
     if (cmdArgs != null) {
@@ -1109,6 +1399,250 @@ public abstract class RuntimeTest {
     // Thread.sleep(100_000_000L);
 
     return p;
+  }
+
+  private Process attachOneliner(
+      String pid,
+      String oneliner,
+      String[] cmdArgs,
+      int checkLines,
+      StringBuilder stdout,
+      StringBuilder stderr)
+      throws Exception {
+    List<String> argVals =
+        new ArrayList<>(
+            Arrays.asList(
+                javaHome + "/bin/java",
+                "-Dcom.sun.btrace.unsafe=" + isUnsafe,
+                "-Dcom.sun.btrace.debug=" + debugBTrace,
+                "-Dcom.sun.btrace.trackRetransforms=" + trackRetransforms,
+                "-Dbtrace.comm.protocol=2",
+                "-Dbtrace.comm.autoNegotiate=false",
+                "-Dbtrace.comm.forceVersion=true",
+                "-cp",
+                cp,
+                "org.openjdk.btrace.boot.Loader",
+                "-cp",
+                eventsClassPath,
+                "-d",
+                Paths.get(System.getProperty("java.io.tmpdir"), "btrace-test").toString(),
+                "-n",
+                oneliner,
+                "-pd",
+                Paths.get(System.getProperty("java.io.tmpdir"), "btrace-oneliner").toString()));
+    if (debugBTrace) {
+      argVals.add("-v");
+    }
+    if (unattended) {
+      argVals.add("-x");
+    }
+    if (btracePort > 0) {
+      argVals.add("-p");
+      argVals.add(String.valueOf(btracePort));
+    }
+    argVals.addAll(Arrays.asList(pid));
+    if (cmdArgs != null) {
+      argVals.addAll(Arrays.asList(cmdArgs));
+    }
+    if (Files.exists(Paths.get(javaHome, "jmods"))) {
+      argVals.addAll(
+          1,
+          Arrays.asList("--add-exports", "jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED"));
+    }
+    ProcessBuilder pb = new ProcessBuilder(argVals);
+
+    pb.environment().remove("JAVA_TOOL_OPTIONS");
+    Process p = pb.start();
+
+    CountDownLatch l = new CountDownLatch(checkLines);
+
+    new Thread(
+            () -> {
+              try {
+                BufferedReader br =
+                    new BufferedReader(
+                        new InputStreamReader(p.getErrorStream(), StandardCharsets.UTF_8));
+
+                String line = null;
+                while ((line = br.readLine()) != null) {
+                  System.out.println("[btrace err] " + line);
+                  if (line.contains("Server VM warning")
+                      || line.contains("XML libraries not available")
+                      || line.contains("Successfully started BTrace probe")
+                      || line.contains("Connection reset")
+                      || line.contains("terminally deprecated method in sun.misc.Unsafe")
+                      || line.contains("sun.misc.Unsafe::objectFieldOffset")
+                      || line.contains("org.jctools.util.UnsafeAccess")
+                      || line.contains("A restricted method")) {
+                    // skip JVM generated warnings
+                    continue;
+                  }
+                  if (line.startsWith("[traced app]") || line.startsWith("[btrace out]")) {
+                    // skip test debug lines
+                    continue;
+                  }
+                  stderr.append(line).append('\n');
+                  if (line.contains("Exception") || line.contains("Error")) {
+                    for (int i = 0; i < checkLines; i++) {
+                      l.countDown();
+                    }
+                  }
+                }
+              } catch (Exception e) {
+                for (int i = 0; i < checkLines; i++) {
+                  l.countDown();
+                }
+                throw new Error(e);
+              }
+            },
+            "Stderr Reader")
+        .start();
+
+    new Thread(
+            () -> {
+              try {
+                BufferedReader br =
+                    new BufferedReader(
+                        new InputStreamReader(p.getInputStream(), StandardCharsets.UTF_8));
+                String line = null;
+                while ((line = br.readLine()) != null) {
+                  stdout.append(line).append('\n');
+                  System.out.println("[btrace out] " + line);
+                  if (!(debugBTrace && line.contains("DEBUG"))) {
+                    l.countDown();
+                  }
+                }
+              } catch (Exception e) {
+                for (int i = 0; i < checkLines; i++) {
+                  l.countDown();
+                }
+                throw new Error(e);
+              }
+            },
+            "Stdout Reader")
+        .start();
+
+    l.await(timeout, TimeUnit.MILLISECONDS);
+
+    return p;
+  }
+
+  protected int getBTracePort() {
+    return btracePort > 0 ? btracePort : Integer.getInteger("btrace.port", 2020);
+  }
+
+  protected String getEventsClassPath() {
+    return eventsClassPath;
+  }
+
+  protected Client createClientForTests(String probeDescPath) {
+    String libs = System.getProperty("btrace.libs");
+    String agentJar = null;
+    String bootJar = null;
+
+    if (libs != null) {
+      // First check for new masked btrace.jar structure
+      Path maskedJar = Paths.get(libs, "btrace.jar");
+      if (Files.exists(maskedJar)) {
+        // Use masked JAR - pass it as agent, boot is embedded
+        agentJar = maskedJar.toString();
+        bootJar = null; // boot classes are in the masked JAR
+      } else {
+        // Fall back to old separate JAR structure
+        agentJar = Paths.get(libs, "btrace-agent.jar").toString();
+        bootJar = Paths.get(libs, "btrace-boot.jar").toString();
+      }
+    }
+
+    return new Client(
+        getBTracePort(),
+        null,
+        probeDescPath,
+        debugBTrace,
+        trackRetransforms,
+        false,
+        false,
+        null,
+        null,
+        agentJar,
+        bootJar);
+  }
+
+  protected List<String> listProbesWithProtocol(String host) throws IOException {
+    int port = getBTracePort();
+    try (Socket socket = new Socket(host, port);
+        WireProtocol protocol = createClientProtocol(socket, host)) {
+      ProtocolConfig config = ProtocolConfig.fromSystemProperties();
+      if (config.isForceVersion()
+          && config.getVersion() == ProtocolVersion.V2
+          && !(protocol instanceof BinaryWireProtocol)) {
+        throw new IOException("Expected V2 protocol but got: " + protocol.getClass().getName());
+      }
+      protocol.write(new ListProbesCommand());
+      Command cmd = protocol.read();
+      if (cmd instanceof ListProbesCommand) {
+        return ((ListProbesCommand) cmd).getProbes();
+      }
+      return Collections.emptyList();
+    } catch (ClassNotFoundException e) {
+      throw new IOException(e);
+    }
+  }
+
+  private WireProtocol createClientProtocol(Socket socket, String host) throws IOException {
+    ProtocolConfig config = ProtocolConfig.fromSystemProperties();
+    ProtocolVersion preferred = config.getVersion();
+
+    if (config.isAutoNegotiate() && preferred == ProtocolVersion.V2) {
+      try {
+        return createV2Protocol(socket);
+      } catch (IOException e) {
+        closeSocketQuietly(socket);
+        Socket fallback = new Socket(host, getBTracePort());
+        return createV1Protocol(fallback);
+      }
+    }
+
+    if (config.isForceVersion() && preferred == ProtocolVersion.V2) {
+      return createV2Protocol(socket);
+    }
+
+    return createV1Protocol(socket);
+  }
+
+  private WireProtocol createV1Protocol(Socket socket) throws IOException {
+    InputStream in = socket.getInputStream();
+    OutputStream out = socket.getOutputStream();
+    return new JavaSerializationProtocol(in, out);
+  }
+
+  private WireProtocol createV2Protocol(Socket socket) throws IOException {
+    InputStream in = socket.getInputStream();
+    OutputStream out = socket.getOutputStream();
+    ProtocolNegotiator negotiator = new ProtocolNegotiator(ProtocolVersion.V2);
+    int timeoutMs = ProtocolNegotiator.getNegotiationTimeoutMs();
+    int previousTimeout = socket.getSoTimeout();
+    try {
+      socket.setSoTimeout(timeoutMs);
+      ProtocolVersion negotiated = negotiator.negotiateClient(in, out, ProtocolVersion.V2);
+      if (negotiated != ProtocolVersion.V2) {
+        throw new IOException("Protocol negotiation failed: expected V2");
+      }
+      return new BinaryWireProtocol(in, out);
+    } finally {
+      socket.setSoTimeout(previousTimeout);
+    }
+  }
+
+  private void closeSocketQuietly(Socket socket) {
+    if (socket == null) {
+      return;
+    }
+    try {
+      socket.close();
+    } catch (IOException ignore) {
+      // best effort
+    }
   }
 
   public interface ResultValidator {
